# Text-Span-JEPA

./: .gitignore  CHECKLIST.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CARD.md  EXPERIMENT_CARD.md  LICENSE  MODEL_CARD.md  Makefile  NOVELTY.md  QUESTIONS_FOR_JEPA_EXPERT.md  README.md  REVIEW_ATTACKS.md  SECURITY.md  SUPPORT.md  baselines_mlm.py  data.py  defaults.yaml  eval.py  model.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py  train_probe.py
.github/workflows/: ci.yaml
