[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-span-jepa"
version = "0.2.0"
description = "Text-Span JEPA: Latent Predictive Learning for Language Representations"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [{name = "Text-Span JEPA Authors"}]
keywords = ["jepa", "self-supervised", "nlp", "representation-learning"]
dependencies = ["torch>=2.0.0", "numpy>=1.24.0", "transformers>=4.30.0", "datasets>=2.12.0", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
eval = ["scikit-learn>=1.2.0", "scipy>=1.10.0"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
